--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 10:24:00 AM</p>
+    <p class="lastupdate">09/14/2020 10:29:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.3&#176;F</td>
+        <td class="data">65.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.3&#176;F</td>
+        <td class="data">65.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.3&#176;F</td>
+        <td class="data">65.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.4&#176;F</td>
+        <td class="data">51.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">61%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.982 inHg (0.015)</td>
+        <td class="data">29.978 inHg (0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">2 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:23 AM">
-            65.3</span><br/>
+          <span title="10:28:09 AM">
+            65.7</span><br/>
           <span title="07:19:55 AM">
             49.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:23:23 AM" class="hival">
-            65.3</span>
+          <span title="10:28:09 AM" class="hival">
+            65.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:52:32 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:40:53 AM">
             95</span><br/>
-          <span title="12:19:16 AM">
-            63</span>
+          <span title="10:25:43 AM">
+            61</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          328
+          332
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">12 days, 19 hours, 37 minutes</td>
+      <td class="data">12 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">12 days, 19 hours, 37 minutes</td>
+      <td class="data">12 days, 19 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
